# mori-san

./: .gitmodules  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  lint.yaml
app/: main.py  reason.py
tests/: test_life.py
tests/data/: alarm_test.json  alarm_test_output.json
